# cpuid

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci_linux.yml  ci_mach.yml  ci_mach_arm.yml  ci_win.yml
src/: main.cpp
